fix for DT-1311, centred aligned website when hiding left side feature

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -220,7 +220,7 @@ a, .widget.twitter ul li a {
 	.main,
 	.template-footer {
 		clear: both;
-		padding: 15px 0;
+		padding: 15px 30px;
 		> * {
 			max-width: 1200px;
 		}
